[package]
name = "wavu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0.1"
flate2 = "1.0.26"
fs_extra = "1.3.0"
futures = "0.3.28"
indicatif = "0.17.5"
log = "0.4.19"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = {version = "1.0.178", features = ["derive"]}
serde_json = "1.0.104"
sysinfo = "0.29.6"
tar = "0.4.39"
xz2 = "0.1.7"
